--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:github": "GITHUB_PAGES=true vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy": "npm run build:github",
+    "deploy": "gh-pages -d dist",
+    "deploy:netlify": "netlify deploy --prod"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
@@ -43,6 +45,7 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "gh-pages": "^6.3.0",
     "jest": "^29.7.0",
+    "netlify-cli": "^19.0.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.2.6",
